Adding File: README.md

--- a/0x03-shell_variables_expansions/readme
+++ b/0x03-shell_variables_expansions/readme
@@ -1,2 +1,2 @@
 #!/bin/bash
-echo -e "# This is $printf `basename "$PWD"` Directory" > README.md
+echo -e "# This is $printf `basename "$PWD"` Directory." > README.md
